# fraud-detection-system

./: .gitignore  Dockerfile  README.md  alembic.ini  dev.env  docker-compose.yaml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: dce3330e4e0c_create_users_table.py
localstack/cache/: machine.json
src/app_api/: models.py
src/data-generator/: data-generator.py
src/data_generator/: data_generator.py  data_layer.py  database.py  generator.py
src/model_training/: config.py  train.py
src/spark_jobs/: processor.py
